9:41pm Commmit LINK update

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 </div>
                 <img src="https://static.tildacdn.com/tild6430-3135-4162-b931-653038623765/background.svg" alt=""
                     class="greeting-container__background">
-                <a target="_blank" href="./index__globe,html"><img src="./src/phone.png" alt=""
+                <a target="_blank" href="./index__globe.html"><img src="./src/phone.png" alt=""
                         class="greeting-container__image--android greeting-container__image--choosen"></a>
-                <a target="_blank" href="./index__cube,html"><img src="./src/phone.png" alt=""
+                <a target="_blank" href="./index__cube.html"><img src="./src/phone.png" alt=""
                         class="greeting-container__image--phone"></a>
             </div>
         </div>
