9:44PM Commit Camera FIX

--- a/index__cube.html
+++ b/index__cube.html
@@ -87,7 +87,7 @@
 
             // create atToolkitContext
             arToolkitContext = new THREEx.ArToolkitContext({
-                cameraParametersUrl: 'data/camera_para.dat',
+                cameraParametersUrl: './src/camera_para.dat',
                 detectionMode: 'mono'
             });
 
