--- a/index__globe.html
+++ b/index__globe.html
@@ -87,7 +87,7 @@
 
             // create atToolkitContext
             arToolkitContext = new THREEx.ArToolkitContext({
-                cameraParametersUrl: 'data/camera_para.dat',
+                cameraParametersUrl: './src/camera_para.dat',
                 detectionMode: 'mono'
             });
 
