--- a/index__globe.html
+++ b/index__globe.html
@@ -110,7 +110,7 @@
             let geometry1 = new THREE.SphereGeometry(1, 32, 32);
 
             let loader = new THREE.TextureLoader();
-            let texture = loader.load('images/earth-sphere.jpg', render);
+            let texture = loader.load('./src/earth-sphere.jpg', render);
             let material1 = new THREE.MeshLambertMaterial({ map: texture, opacity: 0.9 });
 
             mesh1 = new THREE.Mesh(geometry1, material1);
